// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blockProgression renders 0 1`] = `
Array [
  .c0 {
  -webkit-block-progression: 0;
  -ms-flex-block-progression: 0;
  block-progression: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: 0;
  -ms-flex-block-progression: 0;
  block-progression: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: 0;
  -ms-flex-block-progression: 0;
  block-progression: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: 0;
  -ms-flex-block-progression: 0;
  block-progression: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders function 1`] = `
Array [
  .c0 {
  -webkit-block-progression: hasnot;
  -ms-flex-block-progression: hasnot;
  block-progression: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: has;
  -ms-flex-block-progression: has;
  block-progression: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: hasnot;
  -ms-flex-block-progression: hasnot;
  block-progression: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: has;
  -ms-flex-block-progression: has;
  block-progression: has;
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-block-progression: invalid.path.1;
  -ms-flex-block-progression: invalid.path.1;
  block-progression: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: invalid.path.1;
  -ms-flex-block-progression: invalid.path.1;
  block-progression: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: invalid.path.1;
  -ms-flex-block-progression: invalid.path.1;
  block-progression: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: invalid.path.1;
  -ms-flex-block-progression: invalid.path.1;
  block-progression: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders negative number 1`] = `
Array [
  .c0 {
  -webkit-block-progression: -54881;
  -ms-flex-block-progression: -54881;
  block-progression: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: -54881;
  -ms-flex-block-progression: -54881;
  block-progression: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: -42365;
  -ms-flex-block-progression: -42365;
  block-progression: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: -42365;
  -ms-flex-block-progression: -42365;
  block-progression: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-block-progression: July;
  -ms-flex-block-progression: July;
  block-progression: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: July;
  -ms-flex-block-progression: July;
  block-progression: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: January;
  -ms-flex-block-progression: January;
  block-progression: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: December;
    -ms-flex-block-progression: December;
    block-progression: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: June;
    -ms-flex-block-progression: June;
    block-progression: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: January;
  -ms-flex-block-progression: January;
  block-progression: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: December;
    -ms-flex-block-progression: December;
    block-progression: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: June;
    -ms-flex-block-progression: June;
    block-progression: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: July;
    -ms-flex-block-progression: July;
    block-progression: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: July;
    -ms-flex-block-progression: July;
    block-progression: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: June;
    -ms-flex-block-progression: June;
    block-progression: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: June;
    -ms-flex-block-progression: June;
    block-progression: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-block-progression: July;
  -ms-flex-block-progression: July;
  block-progression: July;
}

@media May {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: July;
  -ms-flex-block-progression: July;
  block-progression: July;
}

@media May {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: April;
  -ms-flex-block-progression: April;
  block-progression: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: January;
    -ms-flex-block-progression: January;
    block-progression: January;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: December;
    -ms-flex-block-progression: December;
    block-progression: December;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: April;
  -ms-flex-block-progression: April;
  block-progression: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: January;
    -ms-flex-block-progression: January;
    block-progression: January;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: December;
    -ms-flex-block-progression: December;
    block-progression: December;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-block-progression: July;
    -ms-flex-block-progression: July;
    block-progression: July;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-block-progression: July;
    -ms-flex-block-progression: July;
    block-progression: July;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: September;
    -ms-flex-block-progression: September;
    block-progression: September;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: November;
    -ms-flex-block-progression: November;
    block-progression: November;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: August;
    -ms-flex-block-progression: August;
    block-progression: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-block-progression: January;
    -ms-flex-block-progression: January;
    block-progression: January;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: December;
    -ms-flex-block-progression: December;
    block-progression: December;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: June;
    -ms-flex-block-progression: June;
    block-progression: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-block-progression: January;
    -ms-flex-block-progression: January;
    block-progression: January;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: December;
    -ms-flex-block-progression: December;
    block-progression: December;
  }
}

@media January {
  .c0 {
    -webkit-block-progression: April;
    -ms-flex-block-progression: April;
    block-progression: April;
  }
}

@media April {
  .c0 {
    -webkit-block-progression: May;
    -ms-flex-block-progression: May;
    block-progression: May;
  }
}

@media June {
  .c0 {
    -webkit-block-progression: June;
    -ms-flex-block-progression: June;
    block-progression: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-block-progression: 54881;
  -ms-flex-block-progression: 54881;
  block-progression: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: 54881;
  -ms-flex-block-progression: 54881;
  block-progression: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: 42365;
  -ms-flex-block-progression: 42365;
  block-progression: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: 42365;
  -ms-flex-block-progression: 42365;
  block-progression: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders string 1`] = `
Array [
  .c0 {
  -webkit-block-progression: July;
  -ms-flex-block-progression: July;
  block-progression: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: July;
  -ms-flex-block-progression: July;
  block-progression: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: June;
  -ms-flex-block-progression: June;
  block-progression: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: June;
  -ms-flex-block-progression: June;
  block-progression: June;
}

<div
    className="c0"
  />,
]
`;

exports[`blockProgression renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`blockProgression renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-block-progression: DarkSlateBlue;
  -ms-flex-block-progression: DarkSlateBlue;
  block-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: DarkSlateBlue;
  -ms-flex-block-progression: DarkSlateBlue;
  block-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: DarkSlateBlue;
  -ms-flex-block-progression: DarkSlateBlue;
  block-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-block-progression: DarkSlateBlue;
  -ms-flex-block-progression: DarkSlateBlue;
  block-progression: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
